[package]
version = "0.5.2"
authors = ["David Pedersen <david.pdrsn@gmail.com>"]
categories = ["web-programming"]
description = "Use juniper-from-schema from build.rs"
documentation = "https://docs.rs/juniper-from-schema-build"
edition = "2021"
homepage = "https://github.com/davidpdrsn/juniper-from-schema"
keywords = ["web", "graphql", "juniper"]
license = "MIT"
name = "juniper-from-schema-build"
readme = "README.md"
repository = "https://github.com/davidpdrsn/juniper-from-schema.git"

[dependencies]
juniper-from-schema-code-gen = { version = "0.5.2", path = "../code-gen" }
syn = { version = "2.0.42", features = ["extra-traits"] }
