[package]
version = "0.5.2"
authors = ["David Pedersen <david.pdrsn@gmail.com>"]
categories = ["web-programming"]
description = "Internal code generation crate for juniper-from-schema"
documentation = "https://docs.rs/juniper-from-schema-proc-macro"
edition = "2021"
homepage = "https://github.com/davidpdrsn/juniper-from-schema"
keywords = ["web", "graphql", "juniper"]
license = "MIT"
name = "juniper-from-schema-code-gen"
readme = "README.md"
repository = "https://github.com/davidpdrsn/juniper-from-schema.git"

[dependencies]
syn = { version = "2.0.42", features = ["extra-traits"] }
quote = "1"
graphql-parser = "0.3"
proc-macro2 = "1"
heck = "0.3"
colored = "2.1.0"
prettyplease = "0.2.15"

[dev-dependencies]
version-sync = "0.9.5"
juniper-from-schema-proc-macro = { path= "../proc-macro" }
