[package]
version = "0.5.2"
authors = ["David Pedersen <david.pdrsn@gmail.com>"]
categories = ["web-programming"]
description = "Internal code generation crate for juniper-from-schema"
documentation = "https://docs.rs/juniper-from-schema-proc-macro"
edition = "2021"
homepage = "https://github.com/davidpdrsn/juniper-from-schema"
keywords = ["web", "graphql", "juniper"]
license = "MIT"
name = "juniper-from-schema-proc-macro"
readme = "README.md"
repository = "https://github.com/davidpdrsn/juniper-from-schema.git"

[dependencies]
juniper-from-schema-code-gen = { version = "0.5.2", path = "../code-gen" }
syn = { version = "2.0.42", features = ["extra-traits"] }
prettyplease = "0.2.15"
proc-macro2 = { version = "1.0.70", features = [] }

[dev-dependencies]
version-sync = "0.9.5"

[lib]
proc-macro = true
path = "src/lib.rs"
