[package]
name = "basic"
version = "0.1.0"
authors = [
    "David Pedersen <david.pdrsn@gmail.com>",
    "Kinflow"
]
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.juniper]
#version = "0.15.11"
version = "0.16.0-dev"
git = "https://github.com/graphql-rust/juniper"
rev = "ace6935"

[dependencies]
juniper-from-schema = { version = "0.5.2", path = "../../juniper-from-schema" }

[build-dependencies]
juniper-from-schema-build = { version = "0.5.2", path = "../../builder" }
